<resources>
    <string name="app_name">App3EnRaya</string>
    <string name="title">TicTacToe</string>
    <string name="player1">1 Player</string>
    <string name="_2_players">2 Players</string>
    <string name="easy">Easy</string>
    <string name="normal">Normal</string>
    <string name="imposible">Imposible</string>
    <string name="hecho_por">Made by Pedro Martínez Sánchez</string>
    <string name="_1_dam">1ºDAM</string>
    <string name="info">Info</string>
    <string name="exit">Exit</string>
    <string name="_2_dam">2ºDAM</string>
</resources>