<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    tools:context=".MainActivity">


    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:padding="20dp">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingLeft="50dp">

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.2" />

            <TextView
                style="@style/titulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.2" />

            <Button
                android:id="@+id/btnUnJugador"
                style="@style/boton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/player1" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.2" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/facil"
                    style="@style/radio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/easy" />

                <RadioButton
                    android:id="@+id/normal"
                    style="@style/radio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/normal" />

                <RadioButton
                    android:id="@+id/imposible"
                    style="@style/radio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/imposible" />

            </RadioGroup>

            <Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.2" />

            <Button
                android:id="@+id/btnDosJugador"
                style="@style/boton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_2_players" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:layout_weight="0.2" />

        </LinearLayout>

        <androidx.gridlayout.widget.GridLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="3"
            android:paddingStart="70dp"
            app:columnCount="3"
            app:rowCount="3">

            <ImageView
                android:id="@+id/a1"
                style="@style/casilla" />


            <ImageView
                android:id="@+id/a2"
                style="@style/casilla" />


            <ImageView
                android:id="@+id/a3"
                style="@style/casilla" />


            <ImageView
                android:id="@+id/b1"
                style="@style/casilla" />


            <ImageView
                android:id="@+id/b2"
                style="@style/casilla"
                android:src="@drawable/circulo" />


            <ImageView
                android:id="@+id/b3"
                style="@style/casilla" />


            <ImageView
                android:id="@+id/c1"
                style="@style/casilla"
                android:src="@drawable/aspa" />


            <ImageView
                android:id="@+id/c2"
                style="@style/casilla"
                android:src="@drawable/circulo" />


            <ImageView
                android:id="@+id/c3"
                style="@style/casilla" />

        </androidx.gridlayout.widget.GridLayout>

        <Button
            android:id="@+id/btnInfo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/info" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>